--- a/.env.default
+++ b/.env.default
@@ -1,4 +1,4 @@
-DBUSER=postgres
-DBPASS=454222
-SECRETKEY=qewqqwd22344
-SECRETKEYREFRESH=214323fmsef
+DBUSER=
+DBPASS=
+SECRETKEY=
+SECRETKEYREFRESH=
