--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.15",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
