--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "task_manager",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon index.ts",
+    "start": "ts-node index.ts",
+    "build": "tsc --project ./"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +23,15 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.15",
+    "@types/pg": "^8.6.4",
+    "@types/validator": "^13.7.1",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
