--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,6 +32,7 @@
     "@types/node": "^17.0.15",
     "@types/pg": "^8.6.4",
     "@types/validator": "^13.7.1",
+    "@types/ws": "^8.2.2",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
