--- a/client_ts/package.json
+++ b/client_ts/package.json
@@ -23,7 +23,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build"
   },
   "eslintConfig": {
